--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -7,7 +7,8 @@ build:
   artifacts:
   - imageName: changeme
     workspace: .
-    docker: {}
+    docker: 
+      target: release
   local: {}
 deploy:
   kubectl:
