--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -7,8 +7,7 @@ build:
   artifacts:
   - imageName: changeme
     workspace: .
-    docker: 
-      target: release
+    docker: {} 
   local: {}
 deploy:
   kubectl:
