--- a/charts/m360/templates/deployment.yaml
+++ b/charts/m360/templates/deployment.yaml
@@ -23,6 +23,15 @@ spec:
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         ports:
         - containerPort: {{ .Values.service.internalPort }}
+        env:
+        - name: REDIS_PASSWORD
+          valueFrom:
+            secretKeyRef: 
+              name: "{{.Release.Namespace}}-fecache"
+              key: redis-password
+{{- if .Values.env}}
+{{ toYaml .Values.env | indent 8 }}
+{{- end }}
         livenessProbe:
           httpGet:
             path: {{ .Values.probePath }}
