--- a/charts/m360/values.yaml
+++ b/charts/m360/values.yaml
@@ -14,6 +14,9 @@ service:
   annotations:
     fabric8.io/expose: "true"
     fabric8.io/ingress.annotations: "kubernetes.io/ingress.class: nginx"
+env:
+  - name: ENV_TEST
+    value: test
 resources:
   limits:
     cpu: 400m
