--- a/charts/m360/templates/deployment.yaml
+++ b/charts/m360/templates/deployment.yaml
@@ -27,6 +27,8 @@ spec:
         - name: redis
           mountPath: "/etc/redis"
         env:
+        - name: NAMESPACE
+          value: "{{.Release.Namespace}}"
         - name: REDIS_PASSWORD
           valueFrom:
             secretKeyRef: 
