--- a/charts/m360/templates/deployment.yaml
+++ b/charts/m360/templates/deployment.yaml
@@ -42,6 +42,11 @@ spec:
             secretKeyRef: 
               name: "{{.Release.Namespace}}-pulsedb"
               key: connstr
+        - name: SESSION_SECRET
+          valueFrom:
+            secretKeyRef: 
+              name: "{{.Release.Namespace}}-session"
+              key: secret
 {{- if .Values.env}}
 {{ toYaml .Values.env | indent 8 }}
 {{- end }}
